--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </li>
                 <li>
                     <img src="./img/computador.png" alt="computadores">
-                    <h3 class="lista__item">Compuradores</h3>
+                    <h3 class="lista__item">Computadores</h3>
                 </li>
                 <li>
                     <img src="./img/celular.png" alt="celular e tablest">
